@@ -259,7 +259,7 @@ parse_key(
 		int  max ;
 
 		if( sscanf( key + 2 , "%x-%x" , &min , &max) == 2 &&
-		    ( font = ml_char_add_unicode_area_font( min , max)) != UNKNOWN_CS)
+		    ( font = ml_char_get_unicode_area_font( min , max)) != UNKNOWN_CS)
 		{
 			goto  check_style ;
 		}
@@ -510,9 +510,7 @@ read_conf(
 
 static int
 read_all_conf(
-	x_font_config_t *  font_config ,
-	const char *  changed_font_file	/* This function is called after a font file is changed,
-					 * specify it. Otherwise specify NULL. */
+	x_font_config_t *  font_config
 	)
 {
 	char *  font_rcfile ;
@@ -559,35 +557,26 @@ read_all_conf(
 		}
 	}
 
-	if( ! changed_font_file)
+	if( ( rcpath = kik_get_sys_rc_path( font_rcfile)))
 	{
-		if( ( rcpath = kik_get_sys_rc_path( font_rcfile)))
-		{
-			read_conf( font_config , rcpath) ;
-			free( rcpath) ;
-		}
+		read_conf( font_config , rcpath) ;
+		free( rcpath) ;
 	}
 
-	if( ! changed_font_file || changed_font_file == font_rcfile)
+	if( ( rcpath = kik_get_user_rc_path( font_rcfile)))
 	{
-		if( ( rcpath = kik_get_user_rc_path( font_rcfile)))
-		{
-			read_conf( font_config , rcpath) ;
-			free( rcpath) ;
-		}
+		read_conf( font_config , rcpath) ;
+		free( rcpath) ;
 	}
 
 	apply_custom_cache( font_config , font_rcfile) ;
 
 	if( font_rcfile2)
 	{
-		if( ! changed_font_file)
+		if( ( rcpath = kik_get_sys_rc_path( font_rcfile2)))
 		{
-			if( ( rcpath = kik_get_sys_rc_path( font_rcfile2)))
-			{
-				read_conf( font_config , rcpath) ;
-				free( rcpath) ;
-			}
+			read_conf( font_config , rcpath) ;
+			free( rcpath) ;
 		}
 
 		if( ( rcpath = kik_get_user_rc_path( font_rcfile2)))
@@ -1312,7 +1301,7 @@ x_acquire_font_config(
 	if( ( font_config = create_shared_font_config( type_engine , font_present)) == NULL)
 	{
 		if( ( font_config = x_font_config_new( type_engine , font_present)) == NULL ||
-			! read_all_conf( font_config , NULL) )
+			! read_all_conf( font_config) )
 		{
 			return  NULL ;
 		}
@@ -1698,7 +1687,7 @@ x_customize_font_file(
 			ret = 1 ;
 			for( count = 0 ; count < num_of_targets ; count++)
 			{
-				read_all_conf( targets[count] , file) ;
+				read_all_conf( targets[count]) ;
 			}
 		}
 		else
@@ -1725,7 +1714,7 @@ x_customize_font_file(
 		
 		for( count = 0 ; count < num_of_targets ; count++)
 		{
-			read_all_conf( targets[count] , file) ;
+			read_all_conf( targets[count]) ;
 		}
 	}
 	
